<resources>
    <string name="app_name">Кулибин</string>
    <string name="channel_name">ltc service</string>
    <string name="channel_description">hz</string>
    <string name="help">accel - массив компонент вектора ускорения, location - координаты устройства, stubCount - количество ускорений превышающих заданный порог (удары и падения), device: уровень заряда в процентах, подключен ли кабель(true- заряжается, false - не заряжается, undefined - неопределено), заблокирован ли экран</string>
    <string name="auth_promt">Nemezida\nRationalizator</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="email_promt">Email</string>
    <string name="enter">Вход</string>
    <string name="error">Ошибка!</string>
    <string name="error_request">Ошибка</string>
    <string name="error_wrong_answer_format">Server answer is wrong</string>
    <string name="exit_confirm">Are you sure you wish to log out?</string>
    <string name="forget_psw"><a href="https://ya.ru/">забыли пароль?</a></string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="psw_promt">Пароль</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="scan">Scan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="success_request">Success</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="use_flash">Use Flash</string>
    <string name="wrong_login_psw">Incorrect email or password</string>
    <string name="wrong_need_internet">internet connection needed</string>
    <string name="wrong_no_connection">Can\'t connect to server</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="account_cancel">Cancel</string>
    <string name="exit_account">Выход</string>
    <string name="locale">en-EN</string>
    <string name="close">Close</string>
    <string name="loading">loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_offer">Create Offer</string>
    <string name="send_offer">отправить</string>
    <string name="title_offer">заголовок</string>
    <string name="add_tags">тэги</string>
    <string name="ideas">Идеи</string>
    <string name="offers">предложения</string>
    <string name="add_offer">Новое\nпредложение</string>
    <string name="add_idea">Новая идея</string>
</resources>